# gdrive-datastore

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
src/gdrive_datastore/: gdrive.py
