[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "gdrive-datastore"
version = "0.0.5"
authors = [
  { name="Chenglim Ear", email="chenglim.ear@gmail.com" },
]
description = "A package to facilitate storing data in Google Drive."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ChenglimEar/gdrive-datastore"
"Bug Tracker" = "https://github.com/ChenglimEar/gdrive-datastore/issues"
